# LiFM

./: .gitignore  CMakeLists.txt  config.json  main.cpp
scripts/: buildAndRun.py  externals.txt  loadExternals.py  updateExternals.py
src/: CMakeLists.txt  LiFM.cpp  LiFM.h  main.cpp
src/include/LiFM/: LiFM.hpp
